deployments/pathweb/workloads/media-services/calibre-web/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-web-rewrite-logout-redirect
  namespace: media-services
spec:
  plugin:
    rewriteHeaders:
      rewrites:
      - header: Location
        regex: "^(?:https?://)?(.*)/login$"
        replacement: "/outpost.goauthentik.io/sign_out"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-web-redirect-login-page
  namespace: media-services
spec:
  redirectRegex:
    regex: ^(?:https?://)?(.*)/login$
    replacement: /
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-web-static-caching-policy
  namespace: media-services
spec:
  headers:
    customResponseHeaders:
      Cache-Control: public, max-age=86400, s-maxage=86400, stale-while-revalidate=86400
      Set-Cookie: ""
      Vary: ""
