deployments/pathweb/workloads/media-services/calibre-web/calibre-library-sync-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-library-sync
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre-library-sync
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-library-sync
  serviceName: calibre-library-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-library-sync
      annotations:
        io.cilium.proxy-visibility: <Egress/53/UDP/DNS>
    spec:
      nodeSelector:
        node-group: baldric
      # runtimeClassName: gvisor

      priorityClassName: rfhome-low-priority
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: onedrive
        image: driveone/onedrive:debian
        args:
        - --monitor
        - --confdir
        - /onedrive/conf
        - --single-directory
        - "Calibre Library"
        - --display-running-config
        # - --auth-files

        # - /onedrive/conf/authUrl:/onedrive/conf/authResponse
        - --resync
        - --resync-auth
        volumeMounts:
        # - name: onedrive-temp
        #   mountPath: /onedrive/data
        # - name: calibre-library
        #   mountPath: /onedrive/data/Calibre Library
        - name: data
          mountPath: /onedrive/conf
        - name: onedrive-config
          mountPath: /onedrive/conf/config
          subPath: onedrive-config
        - name: okinawa-media
          mountPath: /onedrive/data/Calibre Library
          subPath: Books/Calibre Library
        resources:
          requests:
            cpu: 50m
            memory: 60Mi
          limits:
            cpu: 350m
            memory: 214M
      volumes:
      # - name: calibre-library
      #   persistentVolumeClaim:
      #     claimName: calibre-library
      # - name: onedrive-temp
      #   emptyDir: {}
      - name: onedrive-config
        configMap:
          name: calibre-library-sync-config
      - name: okinawa-media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        home.yrf.me/backup-to-okinawa-s3: "true"
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "ceph-rbd"
      resources:
        requests:
          storage: 5Gi
