deployments/pathweb/workloads/media-services/calibre-web/httproute-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-external
  labels:
    app.kubernetes.io/name: calibre-web
    external-dns: cf-yrf-me
  annotations:
    external-dns.kubernetes.io/target: ingress-pathweb-clusters-home.yrf.me
spec:
  parentRefs:
  - name: yrf-me-cloudflare-tunnel
    namespace: home-network
    sectionName: http
    kind: Gateway
  hostnames:
  - ebooks.yrf.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ak-outpost-authentik-external-access
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: calibre-web-redirect-login-page
    backendRefs:
    - name: calibre-web
      port: 8083
  - matches:
    - path:
        type: Exact
        value: /logout
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Location
          value: /outpost.goauthentik.io/sign_out
    # - type: ExtensionRef
    #   extensionRef:
    #     group: traefik.io
    #     kind: Middleware
    #     name: calibre-web-rewrite-logout-redirect
    backendRefs:
    - name: calibre-web
      port: 8083
  - matches:
    - path:
        type: PathPrefix
        value: /opds/cover
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: calibre-web-opds-cover-public
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: calibre-web-static-caching-policy
    backendRefs:
    - name: calibre-web
      port: 8083
  - matches:
    - path:
        type: PathPrefix
        value: /static
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: calibre-web-static-caching-policy
    backendRefs:
    - name: calibre-web
      port: 8083
  - matches:
    - path:
        type: PathPrefix
        value: /cover
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ak-outpost-authentik-external-access
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: calibre-web-static-caching-policy
    backendRefs:
    - name: calibre-web
      port: 8083
  - matches:
    - path:
        type: Exact
        value: /webhooks/onedrive-sync
    backendRefs:
    - group: traefik.io
      kind: TraefikService
      name: calibre-web-onedrive-sync-mirror
